--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-modal": "^3.14.3",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"uuid": "^3.4.0",
 		"web-vitals": "^1.0.1"
