--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
+		"antd": "^4.16.9",
 		"firebase": "^8.8.0",
 		"framer-motion": "^4.1.17",
 		"react": "^17.0.2",
